Sugati/src/objects/Supplier_Cost_Payment__c.object
<CustomObject>
    <fields>
        <fullName>SCC_Opportunity_Stage__c</fullName>
        <formula>Text(SCP_Opportunity__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCP_Exchange_Rate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Exchange Rate</label>
        <referenceTo>Exchange_Rate__c</referenceTo>
        <relationshipLabel>Supplier Costs &amp; Payments</relationshipLabel>
        <relationshipName>Supplier_Cost_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SCP_Is_Agent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Agent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SCP_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Supplier Costs &amp; Payments</relationshipLabel>
        <relationshipName>Supplier_Cost_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SCP_Outstanding_Amount__c</fullName>
        <formula>SCP_Total__c-SCP_Total_Payment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outstanding Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SCP_Outstanding__c</fullName>
        <label>Outstanding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SCP_ROE__c</fullName>
        <formula>SCP_Exchange_Rate__r.ER_Exchange_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Costing ROE</inlineHelpText>
        <label>ROE</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SCP_Supplier_Currency__c</fullName>
        <formula>TEXT(SCP_Exchange_Rate__r.ER_Base_Currency__c)</formula>
        <label>Supplier Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCP_Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier</label>
        <referenceTo>Supplier__c</referenceTo>
        <relationshipLabel>Supplier Costs &amp; Payments</relationshipLabel>
        <relationshipName>Supplier_Cost_payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SCP_Total_Cost_in_GBP__c</fullName>
        <formula>SCP_Total__c /  SCP_ROE__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cost in GBP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SCP_Total_Payment__c</fullName>
        <label>Total Payment</label>
        <summarizedField>Supplier_Payment__c.P_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Supplier_Payment__c.SP_Payment_Date__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Supplier_Payment__c.SBP_Supplier_Cost_Currency_Value__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SCP_Total__c</fullName>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Supplier Cost &amp; Payment</label>
    <nameField>
        <displayFormat>SCP-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supplier Costs &amp; Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>